tests/machine/x/pl/fun_call.out
ERROR: /workspace/mochi/tests/machine/x/pl/fun_call.pl:2:3: Syntax error: Operator expected
ERROR: /workspace/mochi/tests/machine/x/pl/fun_call.pl:7:6: Syntax error: Operator expected

